--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -7,7 +7,7 @@
     </ng-template>
   </p-selectButton>
 
-  <div class="row" style="padding-top: 10px;">
+  <div class="row" style="padding-top: 20px; padding-bottom: 20px;">
     <div class="col-xxl-3 col-md-3" *ngIf="isQLMHD_06">
       <div>{{'contract-template.name' | translate}}</div>
       <div class="input-line">
