--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -64,7 +64,7 @@
 
   <!--Bảng dữ liệu-->
   <div class="row" style="padding-top: 20px;min-height: 69vh;">       
-    <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true" [scrollable]="false" scrollDirection="horizontal">
+    <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true" [scrollable]="true" scrollDirection="horizontal">
           <!--header-->
           <ng-template pTemplate="headergrouped">
               <!--header 1-->
