--- a/src/app/main/unit/unit.component.scss
+++ b/src/app/main/unit/unit.component.scss
@@ -94,7 +94,7 @@ input[type="file"] {
 }
 #table td, #table th {
   border: 0px;
-  padding: 8px;
+  padding: 12px 8px;
 }
 
 #table tr:nth-child(even){background-color: #F8FAFF;}
@@ -102,18 +102,15 @@ input[type="file"] {
 #table tr:hover, #table td:hover {background-color: #F8FAFF}
 
 #table th {
-  // text-align: center;
-  // background-color: #E2ECF6;
-  // color: #106DB6;
-  // text-align: left;
   background: #EBF2FB;
-  color: #8E9AB0;
+  color: #0041C4;
   font-family: 'Roboto';
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
   letter-spacing: -0.525px;
+  height: 44px;
 }
 
 .table_col_not_bold {
