--- a/src/app/main/config-sms-email/config-sms-email.component.scss
+++ b/src/app/main/config-sms-email/config-sms-email.component.scss
@@ -28,11 +28,11 @@ th:nth-child(3) {
   border-collapse: collapse;
   width: 100%;
   font-size: 13px;
-  font-family: font_lexend_deca;
+  // font-family: font_lexend_deca;
   }
   #table td, #table th {
-  //border: 1px solid #ddd;
-  padding: 8px;
+    border: 0px;
+    padding: 12px 8px;
   }
   
   #table tr:nth-child(even){background-color: #f2f2f2;}
@@ -40,10 +40,15 @@ th:nth-child(3) {
   #table tr:hover {background-color: #ddd;}
   
   #table th {
-  //text-align: center;
-  background-color: #EBF2FB;
-  color: #8E9AB0;
-  font-weight: 500;
+    background: #EBF2FB;
+    color: #0041C4;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.525px;
+    height: 44px;
   }
   
   #table tr:last-child th:first-child {
