--- a/src/app/main/contract-type/contract-type.component.scss
+++ b/src/app/main/contract-type/contract-type.component.scss
@@ -54,8 +54,8 @@
   // font-family: font_lexend_deca;
 }
 #table td, #table th {
-  //border: 1px solid #ddd;
-  padding: 8px;
+  border: 0px;
+  padding: 12px 8px;
 }
 
 #table tr:nth-child(even){background-color: #f2f2f2;}
@@ -64,9 +64,15 @@
 
 #table th {
   //text-align: center;
-  background-color: #EBF2FB;
-  color: #8E9AB0;
+  background: #EBF2FB;
+  color: #0041C4;
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-style: normal;
   font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.525px;
+  height: 44px;
 }
 
 #table tr:last-child th:first-child {
