--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.scss
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.scss
@@ -36,13 +36,12 @@
 #progressbar li:after {
   content: '';
   width: 100%;
-  height: 2px;
   background: #CCCCCC;
   position: absolute;
   left: -50%;
   top: 9px;
   z-index: 1; /*put it behind the numbers*/
-  height: 5px;
+  height: 2px;
 }
 
 #progressbar li:first-child:after {
@@ -52,7 +51,7 @@
 
 //style step active
 #progressbar li.active:before {
-  background: #106DB6;
+  background: var(--Blue-2, #0055E5);
   color: white;
   z-index: 2;
   position: relative;
@@ -63,7 +62,7 @@
   color: white;
   z-index: 1;
   position: absolute;
-  height: 5px;
+  height: 2px;
 }
 
 // #progressbar li.active:before, #progressbar li.active:after {
@@ -83,8 +82,8 @@
 
 //style current active
 #progressbar li div.current_active {
-  font-weight: 500;
-  color: #106DB6;
+  font-weight: 700;
+  color: #00186D;
 }
 .icon_close{
   margin: 10px;
