--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -150,7 +150,7 @@
           <div class="body_row_1"  id="noti" > 
             <div >
               <a (click)="detailContract(item.participant.contract.id)" style="text-decoration: none;">
-              <div class="row">
+              <div class="row" style="width: 80%;">
                 <div class="col-md-12 item_contract_name1">{{item.participant.contract.name}}</div>
               </div>
               <div class="row">
