--- a/src/app/main/digital-certificate/digital-certificate.component.scss
+++ b/src/app/main/digital-certificate/digital-certificate.component.scss
@@ -74,8 +74,8 @@ input[type="file"] {
 
 #table td,
 #table th {
-  //border: 1px solid #ddd;
-  padding: 8px;
+  border: 0px;
+  padding: 12px 8px;
 }
 
 #table tr:nth-child(even) {
@@ -87,10 +87,15 @@ input[type="file"] {
 }
 
 #table th {
-  //text-align: center;
-  background-color: #EBF2FB;
-  color: #8E9AB0;
+  background: #EBF2FB;
+  color: #0041C4;
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-style: normal;
   font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.525px;
+  height: 44px;
 }
 
 #table tr:last-child th:first-child {
