--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -251,6 +251,11 @@ h3{
   border-radius: 8px;
 }
 
+.row_text_2:hover{
+  box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
+  border: 0.5px solid #C3D7FF;
+}
+
 .btn_add_contract{
   border: 0px;
   border-radius: 6px;
