--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -450,21 +450,30 @@
 .col-lg-8-7 {
   @media (min-width: 992px) {
     flex: 0 0 auto;
-    width: calc(8.7 / 12 * 100%);
+    // width: calc(8.7 / 12 * 100%);
+    width: calc(100% - 447px);
   }
 }
 
 .col-lg-10-9 {
   @media (min-width: 992px) {
     flex: 0 0 auto;
-    width: calc(10.9 / 12 * 100%);
+    //width: calc(10.9 / 12 * 100%);
+    width: calc(100% - 149px);
   }
 }
 
-.col-lg-1-5 {
+.col-lg-9-8 {
   @media (min-width: 992px) {
     flex: 0 0 auto;
-    width: 12.5%;
+    width: calc(100% - 298px);
+  }
+}
+
+.col-lg-1-1 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto;
+    width: 149px;
   }
 
   @media (max-width: 991px) {
@@ -472,20 +481,14 @@
   }
 }
 
-.col-lg-9-8 {
-  @media (min-width: 1400px) {
-    flex: 0 0 auto;
-    width: calc(9.8 / 12 * 100%);
+.col-md-6 {
+  @media (min-width: 768px) and (max-width: 991px) {
+    flex: 0 0 50%;
+    max-width: 50%;
   }
-}
-
-.col-lg-1-1 {
-  @media (min-width: 992px) {
-    flex: 0 0 auto;
-    width: calc(1.1 / 12 * 100%);
-  }
-
-  @media (max-width: 991px) {
+  @media (max-width: 767px) {
+    flex: 0 0 100%;
+    max-width: 100%;
     margin-top: 16px;
   }
 }
