thay đổi logo hợp đồng phần mẫu hợp đồng

--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -54,7 +54,7 @@
             </div>
             <div class="col-xxl-1 col-md-1">
               <div>
-                <img src="../../assets/img/frame_contract.svg" style="width: 72px;">
+                <img src="../../assets/img/Frame 46282.svg" style="width: 72px;">
               </div>
             </div>
         </div>
