--- a/src/app/main/dialog/account-link-dialog/account-link-dialog.component.html
+++ b/src/app/main/dialog/account-link-dialog/account-link-dialog.component.html
@@ -56,7 +56,7 @@
       <!-- <button class="dx-button-form dx-button-close dx-button-90" [ngStyle]="getStyleReset()" (click)="this.count == 0?sendOtpAgain(this.datasOtp.contract_id, this.datasOtp.recipient_id, this.datasOtp.phone):''" type="button">Gửi lại OTP</button>
       <button class="dx-button-form dx-button-close dx-button-90" (click)="onSubmit()" type="button">{{'confirm' | translate}}</button> -->
       <button *ngIf="this.currentStep !== 'infor'"class="link_sso__cancel-btn" (click)="this.dialogRef.close()" type="button">Hủy</button>
-      <button *ngIf="this.currentStep == 'infor'" class="link_sso__otp-btn" style="background-color: #0041C4 !important; margin-bottom: 20px;" (click)="onSubmit('infor')">Liên kết</button>
+      <button *ngIf="this.currentStep == 'infor'" class="link_sso__otp-btn" style="background-color: #0041C4 !important; margin-bottom: 20px; color: #FFFFFF;" (click)="onSubmit('infor')">Liên kết</button>
       <button *ngIf="this.currentStep == 'otp'" class="link_sso__otp-btn" [ngClass]="{'btn-disabled': this.count == 0}" (click)="onSubmit('otp')" type="button">{{'Nhận OTP' | translate}}</button>
       <button *ngIf="isNextStep" class="link_sso__otp-btn" [ngClass]="{'btn-disabled': this.count == 0 || this.ssoOTP.length < 6 || isDisable}" (click)="onSubmit('sync')" type="button" [disabled]="isDisable">{{'Liên kết' | translate}}</button>
     </div>
