Sửa lại giao diện màn hình quên mật khẩu

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -161,7 +161,7 @@
     <div class="bg-footer-login">
       <div class="footer-text" style="padding-left: 1%;">
         <span class="copyright">
-          <img src="../../assets/img/copyright.svg">
+          <img src="../../assets/img/icon-park-outline_copyright.svg">
           {{'footer_text' | translate}}
         </span>
       </div>
