--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -452,14 +452,46 @@ input::placeholder{
     flex: 0 0 auto;
     width: 10%;
   }
-  
+
   .col-xxl-5{
     flex: 0 0 auto;
     width: 39.666667%;
   }
-  
+
   .col-xxl-1{
     flex: 0 0 auto;
     width: 1.333333333%;
   }
+}
+.draft-status {
+  color: #DDBC0A;
+  background: #DDBC0A1A;
+}
+.processing-status {
+  color: #2D6BE7;
+  background: #EEF5FF;
+}
+.expire-status {
+  color: #F6AA51;
+  background: #F6AA511A;
+}
+.overdue-status {
+  color: #525963;
+  background: #5259631A;
+}
+.fail-status {
+  color: #F05046;
+  background: #F050461A;
+}
+.cancel-status {
+  color: #EA328B;
+  background: #EA328B1A;
+}
+.complete-status {
+  color: #24BD33;
+  background: #24BD331A;
+}
+.liquidated-status {
+  color: #23D2EA;
+  background: #23D2EA1A;
 }
