Fix Mặc định hiển thị phần hợp đồng tạo, Chuyển Tên người dùng xuống cuối góc phải, update biểu đồ

--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -33,10 +33,10 @@
         </div>
       </div>
     </div>
-    
-    
+
+
     <div class="col-xxl-6 col-md-6" style="padding-left: 24px;">
-      
+
       <div class="contract-processing">
         <div class="row_text_1">
           <span style="color: #286CF5;">Bạn có tài liệu đang soạn chưa hoàn thành!</span>
@@ -47,7 +47,7 @@
           <div>
             <img src="../../assets/img/frame_contract.svg">
           </div>
-          <div class="body_row_1"  id="noti" > 
+          <div class="body_row_1"  id="noti" >
             <div style="padding: 4px;">
               <a (click)="detailContract(item.id)" style="text-decoration: none;">
                 <div class="row">
@@ -73,7 +73,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="row" style="padding-top: 24px;">
     <div class="col-xxl- 6 col-md-6" style="background-color: #FFFFFF; border-radius: 12px; padding: 16px;">
       <span style="font-size: 14px; font-weight: 700;">{{'menu.contract.receive.list' | translate}}</span>
@@ -147,7 +147,7 @@
           <div>
             <img src="../../assets/img/frame_contract.svg">
           </div>
-          <div class="body_row_1"  id="noti" > 
+          <div class="body_row_1"  id="noti" >
             <div >
               <a (click)="detailContract(item.participant.contract.id)" style="text-decoration: none;">
               <div class="row" style="width: 80%;">
@@ -194,7 +194,7 @@
           <div class="col-md-6" style="text-align: center;">
             <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="search()">
               <ng-template  #options let-item>
-                <span style="vertical-align:middle">{{item.label | translate}}</span>
+                <span style="vertical-align:middle; margin: 0 auto">{{item.label | translate}}</span>
              </ng-template>
             </p-selectButton>
           </div>
@@ -204,7 +204,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="row" *ngIf="this.isOrg == 'off' || (this.isOrg == 'on' && (this.isQLHD_03 || this.isQLHD_04))">
           <div class="col-md-12">
             <div *ngIf="totalCreate == 0"
@@ -216,7 +216,7 @@
             </div>
             <div *ngIf="totalCreate > 0  && (this.isOrg == 'off' || (this.isOrg == 'on' && (this.isQLHD_03 || this.isQLHD_04)))" >
               <div [chart]="chartCreated"></div>
-              <div style="text-align: center;">{{'chart.contract.created' | translate}}</div>
+<!--              <div style="text-align: center;">{{'chart.contract.created' | translate}}</div>-->
             </div>
 
             <div *ngIf="totalCreate > 0  && (this.isOrg == 'on' && !this.isQLHD_03 && !this.isQLHD_04)">
@@ -231,7 +231,7 @@
 
       </div>
     </div>
-    
+
     <div class="col-xxl-6 col-md-6" style="padding-left: 24px;">
       <div class="package" style="background-color: #FFFFFF; border-radius: 12px; padding: 16px; height: 100%;">
         <div class="row">
@@ -239,23 +239,22 @@
             <span style="font-size: 14px; font-weight: 700;">{{'package.document' | translate}}</span>
           </div>
         </div>
-        
-        <div class="row">
-          <div class="col-md-12">
-            <div *ngIf="this.loadData1 && this.loadData2" [chart]="chartPieCreated">TỔNG</div>
-          </div>
-        </div>
-        
-        <div style="display: flex; justify-content: space-evenly;">
-          <div>
-            <img src="../../../assets/img/contractused.svg"/>
-            <span style="margin-left: 10px;">{{'package.used' | translate}}</span>
-          </div>
-          <div>
-            <img src="../../../assets/img/contractunused.svg"/>
-            <span style="margin-left: 10px;">{{'package.unused' | translate}}</span>
-          </div>
-        </div>
+
+       <div class="row item-center" style="align-items: center">
+         <div class="col-md-8">
+             <div *ngIf="this.loadData1 && this.loadData2" [chart]="chartPieCreated">TỔNG</div>
+         </div>
+
+         <div class="col-md-4">
+           <div class="mb-5">
+             <img src="../../../assets/img/contractused.svg"/>
+             <span style="margin-left: 10px;">{{'package.used' | translate}}</span>
+           </div>
+           <div>
+             <img src="../../../assets/img/contractunused.svg"/>
+             <span style="margin-left: 10px;">{{'package.unused' | translate}}</span>
+           </div>
+         </div>
 
       </div>
     </div>
