--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -22,7 +22,7 @@
   .p-selectbutton .p-button {
     outline: 0 !important;
     box-shadow: none !important;
-    height: 33px;
+    height: 40px;
     width: 50%;
     font-weight: 700;
     background-color: #F6F6F6;
@@ -30,10 +30,11 @@
     border: 0px;
   }
   .p-selectbutton .p-button.p-highlight {
-    background: #FFFFFF;
+    background: #0041C4;
     border-color: #FFFFFF;
-    color: #8E9AB0;
+    color: white;
     font-weight: 700;
+    height: 40px;
   }
   .p-datepicker:not(.p-datepicker-inline){
     box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10)!important;
@@ -64,7 +65,7 @@
 ::ng-deep .mat-menu-panel.popup_create_contract{
 
   position: absolute;
-  top: -5.5% !important; 
+  top: -5.5% !important;
   left: 11.5% !important;
   // height: 100%;
   width: 100%;
@@ -113,7 +114,7 @@
   font-weight: 500;
 }
 .header_card{
-  border-radius: 8px; 
+  border-radius: 8px;
   border: 0.5px solid rgba(20, 135, 225, 0.3)!important;
 }
 .header_card:hover{
@@ -143,8 +144,8 @@
 }
 
 .name_required{
-  color: #EE7200; 
-  padding: 5px; 
+  color: #EE7200;
+  padding: 5px;
   width: 80%;
 }
 
@@ -274,12 +275,12 @@ h3{
       flex: 0 0 auto;
       width: 50%;
   }
-  
+
   .col-xxl-8 {
     flex: 0 0 auto;
     width: 70%;
 }
-  
+
   .col-xxl-2 {
     flex: 0 0 auto;
     width: 10%;
@@ -310,4 +311,8 @@ h3{
   .mat-dialog-container {
     border-radius: 12px !important;
   }
+}
+.item-center {
+  align-items: center;
+  height: 100%;
 }
